KTC-411 "Dashboards not showing borders for FF3 Beta 3" Fixed. Updated the css to order the page body background to the back of the dashlets and the "loading" popup in front of the dashlets.
Committed By: Jalaloedien Abrahams
Reviewed By: Jonathan Byrne

git-svn-id: https://kt-dms.svn.sourceforge.net/svnroot/kt-dms/trunk@8381 c91229c3-7414-0410-bfa2-8a42b809f60b

--- a/resources/css/kt-framing.css
+++ b/resources/css/kt-framing.css
@@ -54,6 +54,7 @@ body
     height: auto;
     background-image: url(../../resources/graphics/page_bg.png);
     background-repeat: repeat-x;
+    z-index: 1;
 }
 
 #bodyPad {
@@ -2118,6 +2119,7 @@ body #content #add_dashlet
     top: 400px;
     left: 500px;
     display: block;
+    z-index: 2;
 }
 
 /*contenttype_href class style is used to stop underline error on a hyperlink in IE*/
